Fix user list overflow

--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
                     <i class="las la-sign-out-alt"></i>
                 </div>
             </div>
-
         </div>
 
         <!-- the user list component like -->
@@ -71,6 +70,42 @@
                 <div class="user">
                     <div class="profile_mini">
                         <img src="img/4.png" alt="" class="cover">
+                    </div>
+                    <div class="chatt_details">
+                        <div class="bold">Marcelo</div>
+                        <div class="small_light">Hi there!</div>
+                    </div>
+                </div>
+                <div class="user">
+                    <div class="profile_mini">
+                        <img src="img/6.png" alt="" class="cover">
+                    </div>
+                    <div class="chatt_details">
+                        <div class="bold">Marcelo</div>
+                        <div class="small_light">Hi there!</div>
+                    </div>
+                </div>
+                <div class="user">
+                    <div class="profile_mini">
+                        <img src="img/6.png" alt="" class="cover">
+                    </div>
+                    <div class="chatt_details">
+                        <div class="bold">Marcelo</div>
+                        <div class="small_light">Hi there!</div>
+                    </div>
+                </div>
+                <div class="user">
+                    <div class="profile_mini">
+                        <img src="img/6.png" alt="" class="cover">
+                    </div>
+                    <div class="chatt_details">
+                        <div class="bold">Marcelo</div>
+                        <div class="small_light">Hi there!</div>
+                    </div>
+                </div>
+                <div class="user">
+                    <div class="profile_mini">
+                        <img src="img/6.png" alt="" class="cover">
                     </div>
                     <div class="chatt_details">
                         <div class="bold">Marcelo</div>
